<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    tools:context=".user.UserPageActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="4"
        android:rowCount="8"
        android:layout_margin="10dp"
        android:useDefaultMargins="true">

        <RelativeLayout
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.2"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/secondNameTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/second_name"
                    android:layout_marginTop="80dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/secondNameTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.5"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.2"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0.2"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>
        </RelativeLayout>


    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>